<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PaceBuddy</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_return">Return</string>
    <string name="action_back">Back</string>
    <string name="action_next">Next</string>
    <string name="action_quit">Quit</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_run">RunActivity</string>
    <string name="title_activity_results">ResultsActivity</string>
    <string name="title_activity_result_activity_two">ResultActivityTwo</string>
    <string name="title_activity_result_activity_three">ResultActivityThree</string>
    <string name="title_activity_options">OptionsActivity</string>
    <string name="color_red">Red</string>
    <string name="color_gray">Gray</string>
    <string name="color_yellow">Yellow</string>
    <string name="color_green">Green</string>
    <string name="color_blue">Blue</string>
    <string name="color_magenta">Magenta</string>
    <string name="color_black">Black</string>
    <string name="lowtime">Low Time: 1:00</string>
    <string name="medtime">Medium Time: 10:00</string>
    <string name="hightime">High Time: 30:00</string>
    <string name="notime">No Time Out</string>
    <string name="resetdefaults">Reset Defaults</string>
    <string name="defaults">Defaults</string>
    <string name="_0mph">0.000 MPH</string>
    <string name="_0time">0:00:00</string>
    <string name="_0miles">0.000 Miles</string>
    <string name="_0steps">0 Steps</string>
    <string name="autostopoff">Autostop: Off</string>
    <string name="finish">Finish</string>
    <string name="lap">LAP</string>
    <string name="bg">bg</string>
    <string name="gostring">GO!</string>
    <string name="periodstring">Period: 15 seconds</string>
    <string name="delaystring">Delay: 15 seconds</string>
    <string name="maxstring">Max Speed: 5 MPH</string>
    <string name="minstring">Min Speed: 3 MPH</string>

</resources>
