<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <SeekBar
                android:id="@+id/AutoStopBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="60dp"
                android:max="300"
                android:progress="0" />

            <TextView
                android:id="@+id/AutoStopText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="AutoStop: Off"
                android:textSize="24sp" />
            
		    <RadioGroup
		        android:id="@+id/radioGroup1"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_centerVertical="true"
		        android:paddingTop="50sp" >
		
		        <RadioButton
		            android:id="@+id/radio0"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:checked="true"
		            android:text="@string/color_red" />
		
		        <RadioButton
		            android:id="@+id/radio1"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/color_gray" />
		
		        <RadioButton
		            android:id="@+id/radio2"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/color_yellow" />
		        
		        <RadioButton
		            android:id="@+id/radio3"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/color_green" />
		
		        <RadioButton
		            android:id="@+id/radio4"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/color_blue" />
		
		        <RadioButton
		            android:id="@+id/radio5"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/color_magenta" />
		        
		        <RadioButton
		            android:id="@+id/radio6"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/color_black" />
		    </RadioGroup>            
            
        </LinearLayout>
    </ScrollView>

</RelativeLayout>